--- a/styles.css
+++ b/styles.css
@@ -152,8 +152,41 @@ nav a:hover {
     padding: 10px;
 }
 
-.processbg {
+.researchbg {
     background-color: #f2f6f8;
+    height: 420px;
+}
+
+.researchintro {
+    width: 550px;
+    text-align: center;
+    margin: auto;
+}
+
+.researchtitle {
+    padding-top: 20px;
+    margin-top: 25px;
+}
+
+.researchtext {
+    margin-top: 0;
+}
+
+.research {
+    width: 960px;
+    margin: auto;
+    margin-top: 20px;
+    padding-top: 15px;
+    text-align: center;
+}
+
+.r1, .r2, .r3 {
+    float: left;
+    width: 300px;
+    padding: 10px;
+}
+
+.processbg {
     height: 120%;
 }
 
@@ -171,7 +204,6 @@ nav a:hover {
 .processtext {
     margin-top: 0;
 }
-
 
 .process {
     width: 960px;
