--- a/about_styles.css
+++ b/about_styles.css
@@ -117,191 +117,52 @@ nav a:hover {
 
 
 
-/* HOME PAGE */
-#homeintroimg {
-    width: 100%;
-    height: 100%;
+/* ABOUT PAGE */
+.aboutus {
+    width: 960px;
+    margin: auto;
 }
 
-.homeintrobg {
+.missionbg {
     background-color: #f2f6f8;
-    height: 250px;
-}
-
-.homeintro {
-    width: 960px;
-    text-align: center;
     margin: auto;
+    padding: 5px;
 }
 
-.hometitle {
-    padding-top: 40px;
-    margin-bottom: 0;
-}
-
-.hometext {
-    margin-top: 0;
-}
-
-.introbg {
-    height: 420px;
-}
-
-.intro {
+.ourmission {
     width: 960px;
     margin: auto;
-    margin-top: 20px;
-    padding-top: 15px;
-    text-align: center;
-}
-
-.i1, .i2, .i3 {
-    float: left;
-    width: 300px;
-    padding: 10px;
-}
-
-
-
-
-
-.backgroundbg {
-    background-color: #f2f6f8;
-    height: 1200px;
-}
-
-.backgroundintro {
-    width: 960px;
-    text-align: center;
-    margin: auto;
-}
-
-.backgroundtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.backgroundtext {
-    margin-top: 0;
-}
-
-.background {
-    padding-top: 45px;
-    width: 960px;
-    margin: auto;
-}
-
-.bgimgsright {
-    display: flex;
-    width: 300px;
-    height: auto;
-    padding-left: 15px;
-}
-
-
-.bgimgsleft {
-    display: flex;
-    width: 107px;
-    height: auto;
-}
-
-#prbtxt, #gaptxt {
-    width: 2700px;
-    padding-right: 50px;
-}
-
-#soltxt {
-    width: 2700px;
-}
-
-#problem, #gaps {
-    display: flex;
-    text-align: left;
-}
-
-#solutions {
-    display: flex;
     text-align: right;
 }
 
-#solutions ul {
-    text-align: left;
-}
-
-li {
-    padding-bottom: 20px;
-}
-
-
-
-
-.researchbg {
-    height: 420px;
-}
-
-.researchintro {
-    width: 550px;
-    text-align: center;
-    margin: auto;
-}
-
-.researchtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.researchtext {
-    margin-top: 0;
-}
-
-.research {
-    width: 960px;
-    margin: auto;
-    margin-top: 20px;
+#teamintro {
     padding-top: 15px;
+    width: 960px;
+    margin: auto;
+}
+
+.team {
+    width: 960px;
+    margin: auto;
     text-align: center;
 }
 
-.r1, .r2, .r3 {
+#mikelly, #mirsab, #ariane, #enya {
     float: left;
-    width: 300px;
-    padding: 10px;
+    width: 200px;
+    padding: 20px;
 }
 
-.processbg {
-    background-color: #f2f6f8;
-    height: 120%;
+.memimg {
+    width: 200px;
+    height: 200px;
 }
 
-.processintro {
-    width: 960px;
-    text-align: center;
-    margin: auto;
+.memtext {
+    margin-top: 1px;
 }
 
-.processtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.processtext {
-    margin-top: 0;
-}
-
-.process {
-    width: 960px;
-    margin: auto;
-}
-
-#lofi, #hifi {
-    text-align: left;
-}
-
-#midfi, #prototype {
-    text-align: right;
-}
-
-.designimg {
-    max-width: 100%;
-    height: 100%;
+.memname {
+    margin-top: 2px;
+    margin-bottom: 5px;
 }
