--- a/contact_styles.css
+++ b/contact_styles.css
@@ -117,191 +117,63 @@ nav a:hover {
 
 
 
-/* HOME PAGE */
-#homeintroimg {
-    width: 100%;
-    height: 100%;
-}
-
-.homeintrobg {
-    background-color: #f2f6f8;
-    height: 250px;
-}
-
-.homeintro {
-    width: 960px;
-    text-align: center;
+/* CONTACT PAGE */
+.contactus {
+    width: 800px;
     margin: auto;
 }
 
-.hometitle {
-    padding-top: 40px;
+.contactblock {   
+    background-color: #f2f6f8; 
+    padding: 20px;
+    width: 800px;
+    text-align: center;
+    display: inline-block;
+}
+
+.contactheader {
+    padding: 10px;
+    width: 800px;
+}
+
+#chead {
+    margin-top: 0;
     margin-bottom: 0;
 }
 
-.hometext {
+#ctext {
     margin-top: 0;
+    margin-bottom: 3px;
 }
 
-.introbg {
-    height: 420px;
-}
-
-.intro {
-    width: 960px;
-    margin: auto;
-    margin-top: 20px;
-    padding-top: 15px;
-    text-align: center;
-}
-
-.i1, .i2, .i3 {
+form {
     float: left;
+}
+
+label, input, textarea {
+    display: block;
+    margin-bottom: 5px;
+    height: 25px;
     width: 300px;
-    padding: 10px;
+    color: #30394b;
+    text-align: left;
+    font-family: "DM Sans", Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
 
-
-
-
-
-.backgroundbg {
-    background-color: #f2f6f8;
-    height: 1200px;
-}
-
-.backgroundintro {
-    width: 960px;
-    text-align: center;
-    margin: auto;
-}
-
-.backgroundtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.backgroundtext {
-    margin-top: 0;
-}
-
-.background {
-    padding-top: 45px;
-    width: 960px;
-    margin: auto;
-}
-
-.bgimgsright {
-    display: flex;
+textarea {
+    height: 100px;
     width: 300px;
-    height: auto;
-    padding-left: 15px;
 }
 
-
-.bgimgsleft {
-    display: flex;
-    width: 107px;
-    height: auto;
-}
-
-#prbtxt, #gaptxt {
-    width: 2700px;
-    padding-right: 50px;
-}
-
-#soltxt {
-    width: 2700px;
-}
-
-#problem, #gaps {
-    display: flex;
-    text-align: left;
-}
-
-#solutions {
-    display: flex;
-    text-align: right;
-}
-
-#solutions ul {
-    text-align: left;
-}
-
-li {
-    padding-bottom: 20px;
-}
-
-
-
-
-.researchbg {
-    height: 420px;
-}
-
-.researchintro {
-    width: 550px;
-    text-align: center;
-    margin: auto;
-}
-
-.researchtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.researchtext {
-    margin-top: 0;
-}
-
-.research {
-    width: 960px;
-    margin: auto;
-    margin-top: 20px;
-    padding-top: 15px;
+#submit {
+    height: 35px;
+    width: 100px;
     text-align: center;
 }
 
-.r1, .r2, .r3 {
-    float: left;
-    width: 300px;
-    padding: 10px;
-}
-
-.processbg {
-    background-color: #f2f6f8;
-    height: 120%;
-}
-
-.processintro {
-    width: 960px;
-    text-align: center;
-    margin: auto;
-}
-
-.processtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.processtext {
-    margin-top: 0;
-}
-
-.process {
-    width: 960px;
-    margin: auto;
-}
-
-#lofi, #hifi {
-    text-align: left;
-}
-
-#midfi, #prototype {
-    text-align: right;
-}
-
-.designimg {
-    max-width: 100%;
-    height: 100%;
+#contactimg {
+    float: right;
+    height: 400px;
+    width: 400px;
 }
