--- a/features_style.css
+++ b/features_style.css
@@ -117,191 +117,66 @@ nav a:hover {
 
 
 
-/* HOME PAGE */
-#homeintroimg {
-    width: 100%;
-    height: 100%;
+/* FEATURES PAGE */
+.ccintro {
+    width: 960px;
+    margin: auto;
 }
 
-.homeintrobg {
+.featsbg {
     background-color: #f2f6f8;
-    height: 250px;
+    padding: 2px;
 }
 
-.homeintro {
-    width: 960px;
-    text-align: center;
-    margin: auto;
-}
-
-.hometitle {
-    padding-top: 40px;
-    margin-bottom: 0;
-}
-
-.hometext {
-    margin-top: 0;
-}
-
-.introbg {
-    height: 420px;
-}
-
-.intro {
-    width: 960px;
-    margin: auto;
-    margin-top: 20px;
-    padding-top: 15px;
-    text-align: center;
-}
-
-.i1, .i2, .i3 {
-    float: left;
-    width: 300px;
-    padding: 10px;
-}
-
-
-
-
-
-.backgroundbg {
-    background-color: #f2f6f8;
-    height: 1200px;
-}
-
-.backgroundintro {
-    width: 960px;
-    text-align: center;
-    margin: auto;
-}
-
-.backgroundtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.backgroundtext {
-    margin-top: 0;
-}
-
-.background {
+.feats {
     padding-top: 45px;
+    padding-bottom: 45px;
     width: 960px;
     margin: auto;
 }
 
-.bgimgsright {
+#feat1, #feat3 {
     display: flex;
-    width: 300px;
+    text-align: left;
+}
+
+#feat2, #feat4 {
+    display: flex;
+    text-align: right;
+}
+
+#f1img {
+    display: flex;
+}
+
+#f2img {
+    display: flex;
+}
+
+#f3img {
+    display: flex;
+}
+
+#f4img {
+    display: flex;
+}
+
+.mockupimgsleft {
+    width: 200px;
+    height: auto;
+    padding-right: 15px;
+}
+
+.mockupimgsright {
+    width: 200px;
     height: auto;
     padding-left: 15px;
 }
 
-
-.bgimgsleft {
-    display: flex;
-    width: 107px;
-    height: auto;
+#f1txt, #f3txt {
+    padding-left: 20px;
 }
 
-#prbtxt, #gaptxt {
-    width: 2700px;
-    padding-right: 50px;
-}
-
-#soltxt {
-    width: 2700px;
-}
-
-#problem, #gaps {
-    display: flex;
-    text-align: left;
-}
-
-#solutions {
-    display: flex;
-    text-align: right;
-}
-
-#solutions ul {
-    text-align: left;
-}
-
-li {
-    padding-bottom: 20px;
-}
-
-
-
-
-.researchbg {
-    height: 420px;
-}
-
-.researchintro {
-    width: 550px;
-    text-align: center;
-    margin: auto;
-}
-
-.researchtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.researchtext {
-    margin-top: 0;
-}
-
-.research {
-    width: 960px;
-    margin: auto;
-    margin-top: 20px;
-    padding-top: 15px;
-    text-align: center;
-}
-
-.r1, .r2, .r3 {
-    float: left;
-    width: 300px;
-    padding: 10px;
-}
-
-.processbg {
-    background-color: #f2f6f8;
-    height: 120%;
-}
-
-.processintro {
-    width: 960px;
-    text-align: center;
-    margin: auto;
-}
-
-.processtitle {
-    padding-top: 20px;
-    margin-top: 25px;
-}
-
-.processtext {
-    margin-top: 0;
-}
-
-.process {
-    width: 960px;
-    margin: auto;
-}
-
-#lofi, #hifi {
-    text-align: left;
-}
-
-#midfi, #prototype {
-    text-align: right;
-}
-
-.designimg {
-    max-width: 100%;
-    height: 100%;
+#f2txt, #f4txt {
+    padding-right: 20px;
 }
